Fix linters error

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,11 @@
     "import/no-unresolved": "off",
     "no-shadow": "off"
   },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
   "ignorePatterns": [
     "dist/",
     "build/"
